@@ -1,5 +1,9 @@
 2013-02-13
 
+	* src/notificationwindow.c: adjusted paddings.
+
+2013-02-13
+
 	* src/plugin.[ch]
 	  src/notificationwindow.[ch]
 	  src/main.c
